--- a/frontend/src/Components/TodoCard/TodoCard.css
+++ b/frontend/src/Components/TodoCard/TodoCard.css
@@ -5,7 +5,11 @@
     border-radius: 8px;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.15);
     background-color: #fff;
-    word-wrap: break-word;
+}
+
+.todoCard:hover{
+    box-shadow: inset 0 0 8px 0 rgba(0, 0, 0, 0.25);
+    background-color: #f4f4f4;
 }
 
 .wrapper {
@@ -13,17 +17,33 @@
     flex-grow: 0;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
+    justify-content: space-between;
+    align-items: flex-start;
     gap: 16px;
     padding: 0 0 16px;
     border-bottom: solid 2px #8bbff8;
+    word-wrap: break-word;
+}
+.wrapperButtons {
+    align-self: stretch;
+    flex-grow: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
 }
 
-.description {
-    height: 90px;
-    flex-grow: 0;
-    font-size: 12px;
-    text-align: left;
-    color: #000;
+.buttonEdit {
+    width: 60px;
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    padding: 10px 19px;
+    border-radius: 8px;
+    background-color: #fff;
+    margin-top: 16px;
+}
+
+.buttonEdit:hover{
+    opacity: 50%;
 }
