--- a/frontend/src/Components/HeaderComponent.css
+++ b/frontend/src/Components/HeaderComponent.css
@@ -12,6 +12,7 @@ header {
     font-weight: bold;
     text-align: left;
     color: #000;
+    cursor: pointer;
 }
 
 .filters {
@@ -34,6 +35,7 @@ header {
     gap: 10px;
     padding: 8px 3px;
     border: none;
+    cursor: pointer;
     background-color: transparent;
 }
 .filterbutton:hover {
